# LIBS

./: CMakeLists.txt  README.md  bedrock_lib.cpp  bedrock_lib.hpp  build.sh
bedrock_script/: manifest.json
bedrock_script/scripts/: main.js
examples/: CMakeLists.txt  example_usage.cpp
